--- a/src/css/style.css
+++ b/src/css/style.css
@@ -19,3 +19,17 @@ visibility: visible;
   visibility: hidden;
 }
 
+.AnikaCosta{
+  text-color: #EA4335;
+}
+
+.DanielGarcia{
+  -fx-background-color: header-base-color;
+  -fx-border-color:  #545454;
+  -fx-border-width: 1px;
+  -fx-border-style: solid;
+}
+
+.LiLee{
+  text-color: #34A853;
+}
