--- a/src/view/ContactAppointmentReports.fxml
+++ b/src/view/ContactAppointmentReports.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -9,15 +10,15 @@
 
 <AnchorPane prefHeight="800.0" prefWidth="1050.0" xmlns="http://javafx.com/javafx/11" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ContactAppointReportController">
    <children>
-      <TableView fx:id="contactTable" layoutX="205.0" layoutY="347.0" prefHeight="446.0" prefWidth="938.0" style="-fx-border-color: #3A3B3C;">
+      <TableView fx:id="contactTable" layoutX="189.0" layoutY="347.0" prefHeight="446.0" prefWidth="954.0" style="-fx-border-color: #3A3B3C;">
         <columns>
-          <TableColumn fx:id="appointID" prefWidth="122.0" text="Appointment ID" />
-          <TableColumn fx:id="appointTitle" prefWidth="160.80001831054688" text="Title" />
-            <TableColumn fx:id="appointType" prefWidth="163.2000732421875" text="Type" />
-            <TableColumn fx:id="startTime" prefWidth="108.7999267578125" text="Start" />
-            <TableColumn fx:id="endTime" prefWidth="98.39996337890625" text="End" />
-            <TableColumn fx:id="customerID" prefWidth="102.4000244140625" text="Customer Id" />
-            <TableColumn fx:id="appointDescription" prefWidth="176.00006103515625" text="Description" />
+          <TableColumn fx:id="appointID" prefWidth="104.0" text="Appointment ID" />
+          <TableColumn fx:id="appointTitle" prefWidth="144.0" text="Title" />
+            <TableColumn fx:id="appointType" prefWidth="148.80001831054688" text="Type" />
+            <TableColumn fx:id="startTime" prefWidth="151.20001220703125" text="Start" />
+            <TableColumn fx:id="endTime" prefWidth="148.0" text="End" />
+            <TableColumn fx:id="customerID" prefWidth="76.0" text="Customer Id" />
+            <TableColumn fx:id="appointDescription" prefWidth="178.4000244140625" text="Description" />
         </columns>
       </TableView>
       <Label graphicTextGap="20.0" layoutX="206.0" layoutY="128.0" prefHeight="56.0" prefWidth="583.0" style="-fx-text-fill: #4285F4;" text=" Contact Appointment Reports">
@@ -32,8 +33,6 @@
             <Button fx:id="CustomerButton" layoutX="24.0" layoutY="305.0" mnemonicParsing="false" onAction="#goToCustomers" prefHeight="35.0" prefWidth="141.0" style="-fx-background-color: #34A853; -fx-text-fill: #FFFFFF;" text="Customers" />
          </children>
       </AnchorPane>
-      <Button fx:id="AnikaCostaButton" layoutX="833.0" layoutY="203.0" mnemonicParsing="false" onAction="#loadAnikaCostaTable" prefHeight="30.0" prefWidth="133.0" style="-fx-background-color: #EA4335; -fx-text-fill: #FFFFFF;" text="Anika Costa" />
-      <Button fx:id="DanielGarciaButton" layoutX="981.0" layoutY="203.0" mnemonicParsing="false" onAction="#loadDanielGarciaTable" prefHeight="30.0" prefWidth="133.0" style="-fx-background-color: #34A853; -fx-text-fill: #FFFFFF;" text="Daniel Garcia" />
       <AnchorPane layoutX="-3.0" layoutY="-2.0" prefHeight="45.0" prefWidth="1182.0" style="-fx-background-color: #FFFFFF; -fx-border-color: #3A3B3C; -fx-border-width: 10;">
          <children>
             <AnchorPane layoutX="18.0" layoutY="34.0" prefHeight="35.0" prefWidth="658.0" style="-fx-background-color: #FFFFFF;">
@@ -46,7 +45,15 @@
             </AnchorPane>
          </children>
       </AnchorPane>
-      <Button fx:id="LiLeeButton" layoutX="914.0" layoutY="275.0" mnemonicParsing="false" onAction="#loadLiLeeTable" prefHeight="30.0" prefWidth="133.0" style="-fx-background-color: #4285F4; -fx-text-fill: #FFFFFF;" text="Li Lee" />
-      <Label fx:id="contactName" layoutX="249.0" layoutY="298.0" prefHeight="30.0" prefWidth="370.0" text="Contact" />
+      <Label fx:id="contactName" layoutX="206.0" layoutY="311.0" prefHeight="35.0" prefWidth="557.0" text="All Contacts">
+         <font>
+            <Font name="System Bold" size="24.0" />
+         </font></Label>
+      <Label layoutX="803.0" layoutY="195.0" prefHeight="35.0" prefWidth="194.0" style="-fx-text-fill: #EA4335;" text="Contact Choices">
+         <font>
+            <Font name="System Bold" size="24.0" />
+         </font>
+      </Label>
+      <ChoiceBox fx:id="addContactChoice" layoutX="818.0" layoutY="230.0" prefWidth="150.0" />
    </children>
 </AnchorPane>
